--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333; }
+  background-image: url(/images/london.jpg); }
 
 body {
   display: -ms-flexbox;
