--- a/css/styles.scss
+++ b/css/styles.scss
@@ -27,8 +27,8 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
-  background-image: url(/images/london.jpg);
+  background-color: blue;
+  background-image: url(../images/london.jpg);
 }
 
 body {
