--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,11 @@ a:hover {
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
+  color: #ffffff;
   text-shadow: none;
   /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff; }
+  background-color: #c2d93f;
+  border: .05rem solid #ffffff; }
 
 /*
  * Base structure
@@ -23,7 +23,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: blue;
+  background-color: white;
   background-image: url(../images/london.jpg); }
 
 body {
@@ -48,7 +48,7 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
+  color: #ffffff;
   background-color: transparent;
   border-bottom: .25rem solid transparent; }
 
@@ -60,8 +60,8 @@ body {
   margin-left: 1rem; }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff; }
+  color: #ffffff;
+  border-bottom-color: #ffffff; }
 
 @media (min-width: 48em) {
   .masthead-brand {
@@ -83,4 +83,4 @@ body {
  * Footer
  */
 .mastfoot {
-  color: rgba(255, 255, 255, 0.5); }
+  color: #ffffff; }
