--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,10 +13,10 @@ a:hover {
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
+  color: #ffffff;
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
+  background-color: #c2d93f;
+  border: .05rem solid #ffffff;
 }
 
 
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: blue;
+  background-color: white;
   background-image: url(../images/london.jpg);
 }
 
@@ -58,7 +58,7 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: #ffffff;
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
@@ -73,8 +73,8 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+  color: #ffffff;
+  border-bottom-color: #ffffff;
 }
 
 @media (min-width: 48em) {
@@ -103,5 +103,5 @@ body {
  * Footer
  */
 .mastfoot {
-  color: rgba(255, 255, 255, .5);
+  color: #ffffff;
 }
